<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:background="@color/theme_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous"
            android:text="@string/lets_us_know_you_better"
            android:textColor="@color/theme_text_color_heading"
            android:layout_marginTop="20dp"
            android:textSize="23sp" />

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/ngosignup_select_orgtype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/organization_type"
            android:orientation="horizontal"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/theme_text_color_body">

            <AutoCompleteTextView
                android:id="@+id/ngosignup_select_orgtype_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_category_others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="35dp"
            app:boxStrokeColor="@color/black"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_category_others"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:textCursorDrawable="@null"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/upload_below_documents"
            android:textColor="@color/theme_text_color_body"
            android:layout_marginTop="25dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:weightSum="10">

            <TextView
                android:id="@+id/ngosignup_phone_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9.25"
                android:fontFamily="@font/roboto"
                android:textColor="@color/theme_text_color_body"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/pan_card"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="6dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_weight="0.75"
                android:textAllCaps="false"
                android:text="@string/upload" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9.25"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="15dp"
                android:textColor="@color/theme_text_color_body"
                android:layout_marginBottom="10dp"
                android:text="@string/registration_certificate"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="6dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_weight="0.75"
                android:textAllCaps="false"
                android:text="@string/upload" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9.25"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="15dp"
                android:textColor="@color/theme_text_color_body"
                android:layout_marginBottom="10dp"
                android:text="@string/annual_report"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="6dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_weight="0.75"
                android:textAllCaps="false"
                android:text="@string/upload" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9.25"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/theme_text_color_body"
                android:text="@string/fcra_document"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="6dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_weight="0.75"
                android:textAllCaps="false"
                android:text="@string/upload" />

        </LinearLayout>

        <Button
            android:id="@+id/btnNgoRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_design"
            android:layout_marginTop="85dp"
            android:enabled="true"
            android:elevation="35dp"
            android:textAllCaps="false"
            android:textColor="@color/theme_button_text"
            android:text="@string/get_started" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>