<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp">

    <!--Logo of the application will be added here-->
    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_foreground" />

    <!--TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/userLoginQuote"
        android:textColor="@color/black"
        android:textSize="15sp" /-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tv_signIn_login"
        android:textColor="@color/theme_text_color_body"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_email"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/theme_text_color_body">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/donor_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/theme_text_color_body" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/et_password"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/theme_text_color_body"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/donor_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/theme_text_color_body" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="@color/theme_transparent_button"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:text="@string/btn_forgotPass_login"
            android:textAllCaps="false"
            android:textColor="@color/theme_text_color_body" />

        <Button
            android:id="@+id/userLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_button"
            android:elevation="35dp"
            android:text="Login"
            android:textColor="@color/theme_button_text"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/userSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:padding="5dp"
                android:text="Don\'t have an account?"
                android:textColor="@color/theme_text_color_body" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:padding="5dp"
                android:text="Register"
                android:textColor="@color/theme_text_color_bold"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/theme_transparent_button"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:text="@string/btn_ngoRegister_login"
            android:textAllCaps="false"
            android:textColor="@color/theme_text_color_bold" />

        <!--com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:elevation="35dp"
            android:layout_gravity="center"
            /-->

    </LinearLayout>
</LinearLayout>