<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:text="@string/app_name"
                    android:textSize="20sp"
                    android:fontFamily="@font/righteous"
                    android:textColor="@color/theme_text_color_heading"/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.3"
                    android:backgroundTint="@color/theme_transparent_button"
                    android:src="@drawable/ic_baseline_perm_identity_24"
                    android:id="@+id/profile_button"
                    app:tint="@color/profile_button_color" />
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@color/theme_color_light"

                android:id="@+id/banner"
                android:layout_marginTop="25dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:weightSum="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/categories"
                    android:textColor="@color/theme_text_color_heading"
                    android:layout_weight="1.5"
                    android:fontFamily="@font/righteous"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_more"
                    android:layout_weight=".5"
                    android:textSize="14sp"
                    android:textColor="@color/theme_text_color_heading"
                    android:gravity="center"
                    android:fontFamily="@font/righteous"
                    />
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/cat_1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:backgroundTint="@color/theme_color_light"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toStartOf="@id/cat_2">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_uploadimage"
                        android:padding="13dp"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/cat_2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cat_1"
                    android:backgroundTint="@color/theme_color_light"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toStartOf="@id/cat_3">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_uploadimage"
                        android:padding="13dp"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/cat_3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cat_2"
                    android:backgroundTint="@color/theme_color_light"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toStartOf="@id/cat_4">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_uploadimage"
                        android:padding="13dp"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/cat_4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cat_3"
                    android:backgroundTint="@color/theme_color_light"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toEndOf="parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_uploadimage"
                        android:padding="13dp"/>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/cat_5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:backgroundTint="@color/theme_color_light"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toStartOf="@id/cat_6">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_uploadimage"
                        android:padding="13dp"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/cat_6"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cat_5"
                    android:backgroundTint="@color/theme_color_light"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toStartOf="@id/cat_7">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_uploadimage"
                        android:padding="13dp"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/cat_7"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cat_6"
                    android:backgroundTint="@color/theme_color_light"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toStartOf="@id/cat_8">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_uploadimage"
                        android:padding="13dp"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/cat_8"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cat_7"
                    android:backgroundTint="@color/theme_color_light"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toEndOf="parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_uploadimage"
                        android:padding="13dp"/>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"

                android:backgroundTint="@color/theme_color">
                <TextView
                    android:layout_width="match_parent"
                    android:fontFamily="@font/roboto"
                    android:layout_height="match_parent"
                    android:text="@string/book_sharing_text"
                    android:textSize="24sp"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"/>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:weightSum="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/clothing"
                    android:fontFamily="@font/righteous"
                    android:textColor="@color/theme_text_color_heading"
                    android:layout_weight="1.5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_more"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:fontFamily="@font/righteous"
                    android:textColor="@color/theme_text_color_heading"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:id="@+id/clothing_recycler"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"
        android:backgroundTint="@color/theme_color"
        android:src="@drawable/ic_baseline_add_24"
        />
</androidx.constraintlayout.widget.ConstraintLayout>